# neighbor_sampling_heterogeneous_graphs

./: .gitignore  Makefile  README.md  requirements.txt
notebooks/: heterogeneous_random_walks.ipynb  heterogeneous_random_walks_freebase.ipynb
src/: config.yaml  data.py  freebase.py  heterogeneous_neighbor_sampler.py  mag240m.py  main.py  utils.py
src/heterogeneous_random_walks/: CMakeLists.txt  main.py
src/heterogeneous_random_walks/src/: main.cpp
src/models/: runimp.py
